@@ -1,4 +1,5 @@
 0.05
+ - Add ExternalId object.
 
 0.04 2024-06-25T19:56:28+02:00
  - API change: Add id parameter to Publisher object.
